--- a/References/references.bib
+++ b/References/references.bib
@@ -2,7 +2,17 @@
 % BIBLIOGRAPHY FILE
 % ------------------------------------------------------------------------
 
+% ---------------------------- Unikernels ------------------------------
 
+% Azelea 
+% https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8539634 (Base 
+% paper)
+% 1. Performance papers 
+%   - OS Noise  https://ieeexplore.ieee.org/document/9370730 
+%   - IO offload acceleration (https://www.researchgate.net/publication/347805645_Azalea_unikernel_IO_offload_acceleration) 
+
+% Click OS 
+% https://www.usenix.org/system/files/conference/nsdi14/nsdi14-paper-martins.pdf
 % ---------------------------- TAG Based Architecture --------------------------
 
 %===== TAG Survey =======
