--- a/sty/breakurl.sty
+++ b/sty/breakurl.sty
@@ -34,6 +34,9 @@
 
 \RequirePackage{xkeyval}
 \RequirePackage{ifpdf}
+% \usepackage{booktabs}
+% \usepackage{graphicx}
+% \usepackage[section]{placeins}
 
 \ifpdf
   % Dummy package options
